# pilotproject-sentra

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
01_frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
01_frontend/src/: App.tsx  index.css
01_frontend/src/components/: AnswerCard.tsx  DocumentsTable.tsx  DocumentsView.tsx  Header.tsx  PdfViewer.tsx  SearchBar.tsx  SearchView.tsx  SourceCard.tsx  SourceList.tsx
01_frontend/src/components/explorer/: DocumentList.tsx  ExplorerView.tsx  GeneratedAnswer.tsx  SourceUrlList.tsx
01_frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx
01_frontend/src/lib/: api.ts
01_frontend/src/types/: index.ts
02_backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
02_backend/src/sentra/: config.py  main.py
02_backend/src/sentra/api/: models.py  routes.py
02_backend/src/sentra/ingestion/: chunker.py  metadata.py  parser.py  urls.py
02_backend/src/sentra/rag/: embeddings.py  generator.py  store.py
02_backend/src/sentra/services/: explorer.py  ingest.py  query.py
02_backend/tests/: conftest.py  test_answer_generation.py  test_api_endpoints.py  test_chunker.py  test_external_sources.py  test_filters.py  test_ingestion_e2e.py  test_metadata.py  test_query.py  test_search_relevance.py  test_similar_docs.py  test_url_extraction.py
04_experiments/: A001_MTR_Checking_metadata.ipynb  pyproject.toml
k8s/: deploy.sh  ingress.yaml  kustomization.yaml  namespace.yaml
k8s/backend/: configmap.yaml  deployment.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/qdrant/: deployment.yaml  pvc.yaml  service.yaml
k8s/secrets/: example-secret.yaml  sealed-secret.yaml
k8s/storage/: documents-pvc.yaml
