[project]
name = "sentra"
version = "0.1.0"
description = "RAG prototype for the German Bundestag Wissenschaftliche Dienste"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.72.0",
    "qdrant-client>=1.12.0",
    "openai>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "langdetect>=1.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires Qdrant + AI Hub with ingested data",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
