[project]
name = "04-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "pip>=26.0.1",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
a001 = [
    "pandas>=3.0.1",
    "pypdf2>=3.0.1",
]

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.format]
# Matches Black's formatting style.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
# Emulate Flake8, Pylint, isort, and more with a simple list.
# See the full list of rule codes here: https://docs.astral.sh/ruff/rules/
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "D",  # pydocstyle
    "PL", # Pylint
    "UP", # pyupgrade
]
ignore = [
    "D203", # Conflicts with other rules
    "D212", # Conflicts with other rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# You can ignore specific rules for certain files, e.g., tests.
"tests/*" = ["D100", "D103", "PLR2004"]